<resources>
    <string name="app_name">Prayer-app</string>
    <string name="prayer_app">Prayer App</string>
    <string name="todo">TODO</string>
    <string name="quran">Quran</string>
    <string name="bismillah">Bismillah</string>
    <string name="get_started">Get Started</string>
    <string name="namaz_times">Namaz times</string>
    <string name="zikir">Zikir</string>
    <string name="dini_kitaphana">  Dini kitaphana</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_a">Бисмилляяхир-Рахмаанир-Рахиим Аль-Хамду Лилляяхи Раббиль-`Алямиин Эр-Рахмаанир-Рахиим Малики йаумид-диин Ийяякя ня`буду уа ийяякя наста`иин
Ихдиня ссырааталь-мустакыыйм Ссырааталь-лязиина ан`амта `алейхим, гайриль-магдууби `алейхим уа ляд-дааалиин. Амин!
</string>
    <string name="name_b">Бисмилляхир-Рахманир-Рахиим Куль А`узу Бираббин-Наас. Маликин-Наас. Иляхин-Наас. Мин Шарриль-Уасуасиль-Ханнаас. Аль-Лязи Йувасвису Фи Судурин-Наас. Миналь-Джиннати Уан-Наас.
</string>
    <string name="name_c">Бисмилляхир-Рахманир-Рахиим Куль А`узу Бираббиль-Фаляк. Мин Шарри Ма Халяк. Уа Мин Шарри Гасикыйн Иза Уакаб. Уа Мин Шаррин-Наффасати Филь-`Укад. Уа Мин Шарри Хасидин Иза Хасад.
</string>
    <string name="name_d">Бисмилляхир-Рахманир-Рахиим Куль хуАллааху Ахад Аллаахус-Самад Лям ялид уа лям юляд Уа лям якулляху куфууан Ахад
</string>
    <string name="name_e">Бисмилляхир-Рахманир-Рахиим Иза Джа`а НасруЛлахи Уаль-Фатх. Уа Ра`айтан-Наса Йадхулюна Фи ДиниЛляхи Афуаджаа. Фасаббих Бихамди Раббика Уастагфирху Иннаху Кана Таууабаа.
</string>
    <string name="title">Title</string>

</resources>